--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
     "keywords": ["monit", "graph"],
     "license": "BSD 3-clause",
     "require": {
-        "php": ">=5.6.0",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
+        "php": "^7.1|^8.0",
+        "curl/curl": "^1.6",
         "monolog/monolog": "^1.17",
-        "tuupola/slim-basic-auth": "^2.2",
-        "curl/curl": "^1.6"
+        "slim/php-view": "^2.0",
+        "slim/slim": "^3.1",
+        "tuupola/slim-basic-auth": "^3.3"
     },
     "require-dev": {
-      "phpunit/phpunit": ">=4.8",
-       "squizlabs/php_codesniffer": "^2.5"
+        "phpunit/phpunit": ">=4.8",
+        "squizlabs/php_codesniffer": "^2.5"
     },
     "authors": [
         {
@@ -26,6 +26,10 @@
         "psr-4": {
             "MonitGraph\\": "src/MonitGraph"
         }
+    },
+    "config": {
+        "process-timeout": 0,
+        "sort-packages": true
     },
     "scripts": {
         "server": "php -S 0.0.0.0:8080 -t src/web/public src/web/public/index.php",
